<resources>
    <string name="app_name">Github User Searcher</string>
    <string name="search_hint">Search Github user</string>"
    <string name="user_detail_name">Name: %s</string>
    <string name="user_detail_location">Location: %s</string>
    <string name="user_detail_bio">Bio: %s</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="favorites">Favorites</string>
    <string name="user_detail">User Detail</string>
    <string name="user_list">Users</string>
    <string name="favorite_date">Date added to favorites: %s</string>
    <string name="no_data_desc">There is no person that marked as a favorite!</string>
    <string name="error_msg">Something went wrong!</string>
    <string name="ok">Ok</string>
</resources>